GameState serialization call (#143)
* Converted actionSelected boolean in SelectAndInsertAction to Progress value

* Updated methods in ActionCardResolver

* Standardized name of _performingCard member

* Updated StopCardsAction to use ActionCardResolver and Progress classes

* Updated DiscardCardAction to use ActionCardResolver and Progress classes

* Removed parameter from SelectAndInsertAction constructor

* Updated KillSinglePersonnelAction to use ActionCardResolver class member

* Updated ChangeAffiliationAction to reduce complexity

* Added ActionCardResolver.willProbablyBeEmpty method

* Updated ShuffleCardsIntoDrawDeckAction class to use ActionCardResolver

* Added FixedCardResolver class

* Updated RemoveCardFromPlayAction and RemoveDilemmaFromGameAction to standardize members. Removed unnecessary mission member from RemoveDilemmaFromGameAction.

* Updated several more Action classes to make members more consistent

* Added parsing for mission requirements

* Cleaned up some Action classes

* Renamed DownloadCardFromZoneAction

* If card is placed on mission, check to remove it from cards seeded under missions first

* Renamed DrawCardAction to DrawCardsAction since it primarily supports a multi-card draw

* Updated Serializer classes to rely on Jackson annotations

* Passing attemptingUnit to EncounterSeedCardAction and performing null handling in the constructor

* Specified "cardsInGame" JSON property for GameState class

* Replaced "attachedOn" and "stackedOn" PhysicalCard members of PhysicalCard class with cardId members

* Removed SUPPORT and VOID_FROM_HAND zones since they are no longer in use

* Added ActionStatus property of Action class, and set status to "initiation_started" when it is added to the action stack

* Cleaned up SelectAffiliationAction for serialization

* SelectAffiliationAction serialization cleanup

* Cleaned up AwaitingDecision id names

* Updated SelectAndInsertAction for ser